# rukaml

./: .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .ocamlformat  DEV.md  Ident.ml  Makefile  MiniML.opam  MiniML.opam.template  Pprint.ml  Pprinttyped.ml  README.md  REPL.ml  compile.sh  compiler.ml  demo1.ml  demollvm  discover.ml  dune  dune-project  inferencer.ml  inferencer.mli  parsetree.ml  parsetree.mli  parsing.ml  parsing.mli  pascal.opam  pascal.opam.template  registration.ml  repl.t  rukaml.opam  rukaml.opam.template  stuff.ml  typedtree.ml  typedtree.mli
.github/workflows/: master.yml  riscv64.yml
back/amd64/: amd64_impl.ml  dune  rukaml_amd64.opam  rukaml_stdlib.c  rukaml_stdlib.h  stdlib_cunit.c  stdlib_cunit.t  tests.t
back/llvm/: LLVM_impl.ml  back_llvm.ml  dune  llvm_compiler.ml
back/rv64/: RV64_impl.ml  dune  rukaml_stdlib.c  rv64_compiler.ml
back/rv64/tests/: .gdbinit  .gitignore  add.s  add.t  dune  fac_cps.s  fac_cps.t  fib2.t  gen.ml
back_LLVM/: .ocamlformat  LL.ml  back_llvm.ml  dune  dune-project  llvm_compiler.ml  rukaml_llvm.opam
back_amd64/: .gitignore  amd64_compiler.ml  amd64_compiler.mli  amd64_impl.ml  amd64_impl.mli  back_amd64.ml  dune  dune-project  rukaml_stdlib.c  rukaml_stdlib.h  tests.c  tests.t
back_rv64/: Machine.ml  RV64_compiler.ml  RV64_impl.ml  dune  dune-project  rukaml_stdlib.c
back_rv64/tests/: .gdbinit  dune  fac_cps.s  fac_cps.t  fib2.s  fib2.t  gen.ml
compiler/: ANF.ml  ANF2.ml  CAA.ml  CAA.mli  CAA_tests.ml  CConv.ml  CConv.mli  CFlags.ml  CPS.ml  CPS.mli  CPSConv.ml  CPSConv.mli  compile.ml  compile_tests.ml  compiler.ml  cps_demo.ml  cps_lib.ml  cps_lib.mli  dune  fac.il  fac.t  monads.ml  rkmi.ml  rkmi.mli  rukaml_stdlib.c  test_ANF.ml  test_CConv.ml  x.t
driver/: driver.ml  dune
front/: Pprint.ml  Pprinttyped.ml  dune  inferencer.ml  inferencer.mli  parsetree.ml  parsetree.mli  parsing.ml  parsing.mli  test_parsing.ml  test_stuff.ml  typedtree.ml  typedtree.mli
lib/: AST.ml  codegen.ml  driver.ml  dune  machine.ml  parser.ml  parser1_tests.ml
lib/ParseSIMD/: demo.ml  dune  make_ast.cpp  parseSIMD.ml  parser_in_c.cpp  src3.cpp
lib/alco/: dune  floats.ml  parser1test.ml
lib/bench/: dune  parser_bench.ml
lib/parser/: demo.ml  dune
llvm/: LL.ml  LLVMIR.ml  LLVM_impl.ml  MiniML_llvm.opam  README.md  back_llvm.ml  dune  dune-project  generics.t  lambda.t  llvm_compiler.ml  partial_application.t  run.t  runtime.c
middle/: ANF.ml  CAA.mli  CAA_tests.ml  CConv.ml  CConv.mli  CPSConv.ml  CPSLang.ml  compiler.ml  dune  x.t
miniml/: AST.ml  dune  parser.ml  tests.ml
test/: .gdbinit  .gitignore  Pprint.ml  demo1.S  demo1.pas  dune  factorial.pas  fib_loop.pas  qc.ml  qc_parser.ml  run.t  rv64_runtime.S  test_pascal.expected  test_pascal.ml
tests/amd64/: .gdbinit  .gitignore  .ocamlformat  app1.asm  app1.ml  arith.t  double.ml  dune  fac.asm  fac.ml  fac.t  fack.asm  fack.t  fib.t  hack.asm  if.asm  if.ml  if.t  long_app.asm  long_app.ml  long_app.t  pass_print.ml  pass_print.t  print.ml  print.t  print3.ml  print3.t  run.t  tuple0.ml  tuple0.t  tuples.t
tests/amd64/demos/: .gitignore  app1.ml  dune  fac.ml  fack.ml  gc1.ml  hack.ml
tests/amd64/separate/: dune  fac.ml  fac.t  fac_main.ml
tests/anf/: REPL.ml  anf1.t  cconv.t  dune  large.t  tuples.t
tests/caa_demo/dumps/: dune  fack.t  fib0.t  fibk.t  fibst.t
tests/cconv/: 1.t  2.t  Nested_let.t  REPL.ml  cconv.t  dune  nested_let.t  vb.t
tests/cps/: .gitignore  1.t  anon1.t  caa_print_order.ml  caa_print_order.t  caa_print_order_rec.ml  caa_print_order_rec.t  dead_print.ml  dead_print.t  dune  dune.tests  empty.t  fac.t  fac_acc.t  fac_cps.t  fib.t  fib_acc.t  fib_cps.t  gen.ml  nikita2.t  nikita3.t  order1.t  pass_print.t
tests/llvm/: a.t  dune  dune.tests  fack.ml  fack.t  gen.ml  plugin.t  simple1.t  simple2.t  tuples.t
tests/llvm/1/: run.t  run2.t
tests/parsing/: REPL.ml  arrays.t  (+14 more)
tests/rv64/: .gdbinit  .ocamlformat-ignore  add.ml  add.t  anon1.ml  anon1.t  dune  empty.ml  empty.t  fac.ml  fac.t  fac_acc.ml  fac_acc.t  fac_cps.ml  fib.ml  fib.t  fib2.ml  fib2.t  fib_acc.ml  fib_acc.t  fib_cps.ml  fib_cps.t  gen.ml  ite0.ml  ite0.t  long_app.S  long_app.ml  long_app.t  nikita2.ml  nikita2.t  nikita3.ml  nikita3.t  order1.ml  order1.t  pass_print.ml  pass_print.t  pass_print2.ml  pass_print2.t
tests_unsorted/: 001helloworld_gas.t  002helloworld_nasm.t  003hello.s  003helloworld.t  004fac.c  004fac.t  004fac_main.s  005fac.s  005fac.t  005print_int.c  dune  gas1.t  helloworld_gas.s  helloworld_nasm.s
tests_unsorted/ocaml/: dune  run.t  sum.ml
tests_unsorted/riscv64/: 001.t  002bm.t  003v.t  add2.s  add2.t  demo_runtime.c  dune  fac.s
tests_unsorted/rv64/: bm1.s  dune  strcpy.s
testsuite/: README.md  build.ml  build_utils.ml  dune
testsuite/artifacts/: README.md  dune
testsuite/artifacts/cram/: dune
testsuite/expected/: cps.dead_print.fl0.rv64.out  cps.dead_print.fl1.rv64.out  cps.dead_print.fl2.rv64.out  dune  fac.amd64.out  fac.rv64.out  fail.if.fl0.rv64.out  fail.large.fl0.amd64.out  fail.large.fl0.anf.out  fail.print.fl0.rv64.out  large.fl0.amd64.out  large.fl0.anf.out
testsuite/tests/: .ocamlformat-ignore  add.ml  anon.ml  array0.ml  array1.ml  closure0.ml  closure1.ml  empty.ml  fac.ml  fac_acc.ml  fack.ml  fib.ml  fib_acc.ml  fib_cmp.ml  fibk.ml  if.ml  ite.ml  large.ml  long_app.ml  loop.ml  order.ml  pass_print.ml  pass_print0.ml  pass_print1.ml  print.ml  printk.ml  tuple_gc.ml
testsuite/tests/caa/: fack10.ml  fack10_ar.ml  fack10caa.ml  fack15.ml  fack15_ar.ml  fack15caa.ml  fack5.ml  fack5_ar.ml  fack5caa.ml  fib0.ml  fib0_ar.ml  fib0caa.ml  fibk10.ml  fibk10_ar.ml  fibk10caa.ml  fibk15.ml  fibk15_ar.ml  fibk15caa.ml  fibk5.ml  fibk5_ar.ml  fibk5caa.ml  fibst5.ml  fibst5_ar.ml  fibst5caa.ml
testsuite/tests/cps/: dead_print.ml  print_order.ml  print_order_rec.ml
testsuite/tests/fail/: if.ml  if.ml.disabled  large.ml  print.ml
testsuite/tests/llvm/: fack.ml  simple.ml  tuples.ml
unsorted/: .gdbinit  dune  mmap.t  mmap_asm_demo.S  mmap_c_demo.c  print.s  print_int.s  run.t  strings.S
(+35 files in other folders)
