(env
 (dev
  (flags
   (:standard -w -32-33 -warn-error -8-9-26-27-34-37-39-69))))

(executable
 (name REPL)
 (modules REPL)
 (libraries stdio miniml))

(cram
 (deps ./REPL.exe))

; Compiler executable and plugins

(library
 (public_name rukaml.register)
 (name registration)
 (modules registration)
 (libraries miniml))

(executable
 (public_name minimlc)
 (name compiler)
 (modules sites compiler)
 (libraries registration dune-site dune-site.plugins))

(generate_sites_module
 (module sites)
 (plugins
  (rukaml plugins)))
