(env
 (dev
  (flags
   (:standard -w -32-33 -warn-error -8-9-26-27-34-37-39-69))))

(executable
 (name discover)
 (libraries dune-configurator base stdio))

(rule
 (targets
  cc_amd64
  as_amd64
  ld_amd64
  run_amd64
  cc_rv64
  as_rv64
  ld_rv64
  run_rv64
  cc_llvm
  as_llvm
  ld_llvm
  run_llvm)
 (action
  (run ./discover.exe)))

(alias
 (name default)
 (deps
  (alias_rec front/all)
  (alias_rec middle/all)
  (alias_rec back/all)))

(alias
 (name runtest)
 (deps
  (alias_rec front/runtest)
  (alias_rec middle/runtest)
  (alias_rec back/runtest)
  (alias_rec tests/runtest)))
