(library
 (name compile_lib)
 (public_name MiniML.compile)
 (libraries stdio miniml cconv)
 (modules ANF rkmi)
 ;  (preprocess
 ;   (pps
 ;    ; ppx_blob
 ;    ppx_expect_nobase
 ;    ;
 ;    ))
 ;  (inline_tests)
 )

(library
 (public_name MiniML.cconv)
 (name cconv)
 (libraries miniml)
 (modules CConv monads)
 (wrapped false))

(library
 (name compile_lib_tests)
 (modules compile_tests test_CConv test_ANF)
 (libraries compile_lib)
 (inline_tests)
 (preprocess
  (pps
   ; ppx_blob
   ppx_expect_nobase
   ;
   )))

(executable
 (name compiler)
 (modules compiler)
 (libraries stdio base miniml compile_lib))

(cram
 ;(enabled_if
 ; (= true %{env:RUN_MY_TEST=false}))
 (deps ../REPL.exe ./compiler.exe rukaml_stdlib.o))

(rule
 (targets rukaml_stdlib.o)
 (deps rukaml_stdlib.c)
 (action
  (run
   gcc
   -g
   %{deps}
   -c
   -o
   %{targets}
   ;
   )))
