(library
 (name compile_lib)
 (public_name MiniML.compile)
 (libraries stdio miniml cconv ppxlib.stdppx ocamlgraph)
 (modules ANF CPS CFlags compile_tests)
 (preprocess
  (pps
   ; ppx_blob
   ppx_expect
   bisect_ppx
   ;
   ))
 (inline_tests))

(library
 (public_name rukaml.cconv)
 (name cconv)
 (libraries Frontend)
 (modules CConv monads)
 (wrapped false)
 (preprocess
  (pps
   ; ppx_blob
   ppx_expect
   bisect_ppx
   ;
   ))
 (inline_tests))

(executable
 (name compiler)
 (modules compiler)
 (libraries stdio base Frontend compile_lib))

(cram
 ;(enabled_if
 ; (= true %{env:RUN_MY_TEST=false}))
 (deps ../REPL.exe ./compiler.exe rukaml_stdlib.o))

(rule
 (targets rukaml_stdlib.o)
 (deps rukaml_stdlib.c)
 (action
  (run
   gcc
   -g
   %{deps}
   -c
   -o
   %{targets}
   ;
   )))
