(library
 (name Frontend)
 (modules Ident inferencer parsetree parsing Pprinttyped Pprint typedtree)
 (libraries ppx_deriving.runtime angstrom base)
 (preprocess
  (pps ppx_deriving.show bisect_ppx ppx_expect)))

(library
 (name frontend_tests)
 (libraries Frontend)
 (inline_tests)
 (modules test_stuff test_parsing)
 (preprocess
  (pps ppx_deriving.show ppx_expect)))
