(library
 (name Frontend)
 (public_name rukaml.frontend)
 (modules
  Ident
  inferencer
  parsetree
  parsing
  Pprinttyped
  Pprint
  typedtree
  ;
  )
 ;(inline_tests)
 (libraries ppx_deriving.runtime angstrom base str)
 (preprocess
  (pps ppx_deriving.show ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name frontend_tests)
 (libraries Frontend)
 (inline_tests)
 (modules test_stuff test_parsing)
 (preprocess
  (pps ppx_deriving.show ppx_expect)))
