(library
 (name lib_pascal)
 (modules AST parser machine codegen)
 (libraries ppx_show.runtime)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   ; ppx_show
   ppx_deriving.show
   ppx_expect
   ppx_inline_test)))

(executable
 (name driver)
 (package pascal)
 (public_name pascal)
 (modules driver)
 (libraries lib_pascal))

(cram
 (deps ./driver.exe))
