(library
 (name AST)
 (modules AST)
 (wrapped false)
 (libraries ppx_show.runtime)
 (preprocess
  (pps
   ; ppx_show
   ppx_deriving.show
   ppx_expect
   ppx_inline_test)))

(library
 (name parser1)
 (modules parser parser1_tests)
 (libraries AST)
 (ocamlopt_flags
  (:standard -inline 100))
 (inline_tests)
 (wrapped false)
 (preprocess
  (per_module
   ((pps ppx_deriving.show ppx_expect ppx_inline_test)
    parser1_tests)
   ((pps ppx_deriving.show)
    parser))))

(library
 (name lib_pascal)
 (modules machine codegen)
 (libraries AST ppx_show.runtime parser1)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   ; ppx_show
   ppx_deriving.show
   ppx_expect
   ppx_inline_test)))

(executable
 (name driver)
 (package pascal)
 (public_name pascal)
 (modules driver)
 (libraries lib_pascal parser1))

(cram
 (deps ./driver.exe))
