(env
 (dev
  (flags
   (:standard -w -32-33 -warn-error -8-26-27-34-37-39-69))))

(library
 (name LL)
 (public_name MiniML_llvm.LL)
 (modules LL)
 (libraries llvm)
 (inline_tests)
 (flags
  (:standard -linkall))
 (preprocess
  (pps ppx_inline_test)))

(library
 (name LLVM_impl)
 (public_name MiniML_llvm.impl)
 (modules LLVM_impl)
 (libraries
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.target
  llvm.scalar_opts
  llvm.all_backends
  LL
  MiniML.cconv
  MiniML.compile)
 (inline_tests)
 (flags
  (:standard -linkall))
 (preprocess
  (pps ppx_inline_test)))

(executable
 (name llvm_compiler)
 (modules llvm_compiler)
 (libraries stdio LL MiniML.frontend MiniML.cconv MiniML.compile LLVM_impl))

(cram
 (deps ./llvm_compiler.exe))

(library
 (public_name MiniML_llvm.backend)
 (name llvm_backend)
 (modules back_llvm)
 (flags
  (:standard -linkall))
 (libraries MiniML.register MiniML.cconv MiniML.compile llvm LL))

(plugin
 (name plugin_llvm)
 (libraries MiniML_llvm.backend)
 (site
  (MiniML plugins)))
