(library
 (name compile_lib)
 (libraries stdio Frontend cconv ppxlib.stdppx ocamlgraph)
 (modules ANF CPSLang CPSConv CAA CFlags compile_tests CAA_tests)
 (preprocess
  (pps ppx_deriving.show ppx_expect bisect_ppx))
 (inline_tests))

(library
 (name cconv)
 (libraries Frontend)
 (modules CConv monads)
 (wrapped false)
 (preprocess
  (pps ppx_expect bisect_ppx))
 (inline_tests))

(executable
 (name compiler)
 (modules compiler)
 (libraries stdio base Frontend compile_lib))
