(cram
 (applies_to 001helloworld_gas)
 (deps helloworld_gas.s))

(cram
 (applies_to 002helloworld_nasm)
 (deps helloworld_nasm.s))

(rule
 (targets 002hello.exe)
 (deps
  (:src helloworld_nasm.s))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run nasm -g -F dwarf -felf64 %{src} -o hello.o)
   (run ld hello.o -o %{targets}))))

(cram
 (applies_to 003helloworld)
 (deps 003hello.s))

(cram
 (applies_to 004fac)
 (deps
  004fac.c
  004fac_main.s
  ;
  ))

(cram
 (applies_to 005fac)
 (deps
  005print_int.c
  005fac.s
  ;
  ))

(rule
 (targets fac.exe)
 (deps
  (:srcasm 005fac.s)
  (:srcc 005print_int.c))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run nasm -g -F dwarf -felf64 %{srcasm} -o fac.o)
   (run gcc-12 -g fac.o %{srcc} -o %{targets}))))
