(executable
 (name build)
 (modules build build_utils)
 (libraries base parsexp angstrom))

(rule
 (targets expected.dune artifacts.dune cram.dune)
 (deps
  ../as_rv64 ; to enfore order of rules execution
  (:tests
   (glob_files_rec tests/*.ml)))
 (action
  (run ./build.exe %{project_root} %{tests})))
