(cram
 (deps print.s print.exe strings.exe))

(rule
 (targets print.exe)
 (deps
  (:src print.s)
  ;(:runtime demo_runtime.c)
  )
 (mode
  (promote (until-clean)))
 (action
  (progn
   ;(run riscv64-linux-gnu-gcc -march=rv64gc_zbb %{runtime} -c -o runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc_zbb %{src} -o main.o)
   (run
    riscv64-linux-gnu-ld
    ; -march=rv64gc_zbb
    main.o
    -o
    %{targets}))))

(rule
 (targets strings.exe)
 (deps
  (:src strings.S))
 (mode
  (promote (until-clean)))
 (action
  (progn
   ;(run riscv64-linux-gnu-gcc -march=rv64gc_zbb %{runtime} -c -o runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc_zbb %{src} -o main.o)
   (run
    riscv64-linux-gnu-ld
    ; -march=rv64gc_zbb
    main.o
    -o
    %{targets}))))
