(env
 (dev
  (flags
   (:standard -warn-error -26-27-39))
  (ocamlopt_flags
   (:standard -S))))

(library
 (name amd64_impl)
 (public_name rukaml_amd64.impl)
 (modules amd64_impl)
 (wrapped false)
 (libraries rukaml.cconv rukaml.compile)
 (preprocess
  (pps bisect_ppx)))

(executable
 (name amd64_compiler)
 (modules amd64_compiler)
 (libraries stdio amd64_impl))

(library
 (public_name rukaml_amd64.backend)
 (name plugin1_impl)
 (modules back_amd64)
 (libraries
  rukaml.frontend
  rukaml.compile
  rukaml.register
  rukaml.cconv
  amd64_impl))

(plugin
 (name plugin1)
 (libraries rukaml_amd64.backend)
 (site
  (rukaml plugins)))

(rule
 (targets rukaml_stdlib.o)
 (deps
  (:src rukaml_stdlib.c)
  rukaml_stdlib.h)
 (action
  (run
   gcc-13
   -g
   -Wall
   -Wpedantic
   %{src}
   -c
   -o
   %{targets}
   ;
   )))

(rule
 (target tests.exe)
 (deps
  (:stdlib rukaml_stdlib.o)
  rukaml_stdlib.h
  (:src tests.c))
 (mode
  (promote (until-clean)))
 (action
  (run
   gcc-13
   -g
   -Wall
   -Wpedantic
   -o
   %{target}
   %{stdlib}
   %{src}
   -lcunit
   ;
   )))

(cram
 (applies_to tests)
 (deps tests.exe))
