(library
 (name LL)
 (modules LL)
 (libraries llvm)
 (inline_tests)
 (flags
  (:standard -linkall))
 (preprocess
  (pps ppx_inline_test bisect_ppx)))

(library
 (name LLVM_impl)
 (modules LLVM_impl)
 (libraries
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.target
  llvm.all_backends
  LL
  compile_lib
  cconv)
 (inline_tests)
 (flags
  (:standard -linkall))
 (preprocess
  (pps ppx_inline_test bisect_ppx)))

(executable
 (name llvm_compiler)
 (modules llvm_compiler)
 (libraries stdio LL Frontend cconv compile_lib LLVM_impl))

(cram
 (deps ./llvm_compiler.exe))

(library
 (name llvm_backend)
 (modules back_llvm)
 (flags
  (:standard -linkall))
 (libraries cconv compile_lib llvm LL))
