(env
 (dev
  (flags
   (:standard -warn-error -26-27-39))
  (ocamlopt_flags (:standard))))

(library
 (name rv64_impl)
 (modules RV64_impl Machine)
 (wrapped false)
 (libraries cconv compile_lib)
 (preprocess
  (pps bisect_ppx)))

(executable
 (name RV64_compiler)
 (modules RV64_compiler)
 (libraries stdio rv64_impl))

(rule
 (target rukaml_stdlib.o)
 (enabled_if
  (not
   (= none %{read:../../cc_rv64})))
 (deps rukaml_stdlib.c)
 (action
  (system "%{read:../../cc_rv64} -c %{deps} -o %{target}")))
