(cram
 (applies_to run fac fib if fack print tuples)
 (deps
  (package MiniML)
  (package MiniML_amd64)
  ;(package minimlc)
  %{project_root}/compiler.exe
  ;%{project_root}/llvm/llvm_backend.cmxs # issues with linksing C code
  ;%{project_root}/llvm/llvm_compiler.exe
  %{project_root}/back_amd64/amd64_compiler.exe
  %{project_root}/back_amd64/rukaml_stdlib.o
  ;
  ../llvm/fack.ml
  ;
  ;double.exe
  ))

(rule
 (targets print.asm print.exe)
 (deps
  print.ml
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{project_root}/back_amd64/amd64_compiler.exe print.ml -o print.asm)
   (run nasm -g -F dwarf -felf64 print.asm -o print.o)
   (run gcc -g print.o %{stdlib} -o print.exe))))
