(cram
 (deps
  (package rukaml)
  (package rukaml_amd64)
  %{project_root}/compiler.exe
  %{project_root}/back_amd64/amd64_compiler.exe
  %{project_root}/back_amd64/rukaml_stdlib.o
  ;
  ))

;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to fac)
 (deps ./fac.ml fac.exe))

(rule
 (targets fac.asm)
 (deps
  (:src fac.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o fac.asm)))

(rule
 (targets fac.exe)
 (deps
  (:src fac.asm)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run nasm -g -F dwarf -felf64 %{src} -o fac.o)
   (run gcc-13 -g -no-pie fac.o %{stdlib} -o fac.exe))))

;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to print)
 (deps ./print.ml print.exe))

(rule
 (targets print.asm print.exe)
 (deps
  (:src print.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o print.asm)
   (run nasm -g -F dwarf -felf64 print.asm -o print.o)
   (run gcc-13 -g -no-pie print.o %{stdlib} -o print.exe))))

;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to print3)
 (deps ./print3.ml print3.exe))

(rule
 (targets print3.asm print3.exe)
 (deps
  (:src print3.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o print3.asm)
   (run nasm -g -F dwarf -felf64 print3.asm -o print3.o)
   (run gcc-13 -g -no-pie print3.o %{stdlib} -o print3.exe))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to if)
 (deps
  ./if.ml
  ;
  ))

(rule
 (targets if.asm if.exe)
 (deps
  (:src if.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o if.asm)
   (run nasm -g -F dwarf -felf64 if.asm -o if.o)
   (run gcc-13 -g -no-pie if.o %{stdlib} -o if.exe))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to long_app)
 (deps
  ./long_app.ml
  long_app.exe
  ;
  ))

(rule
 (targets long_app.asm long_app.exe)
 (deps
  (:src long_app.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o long_app.asm)
   (run nasm -g -F dwarf -felf64 long_app.asm -o long_app.o)
   (run gcc-13 -g -no-pie long_app.o %{stdlib} -o long_app.exe))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to pass_print)
 (deps ./pass_print.ml pass_print.exe))

(rule
 (targets pass_print.asm pass_print.exe)
 (deps
  (:src pass_print.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_amd64/amd64_compiler.exe
    %{src}
    -o
    pass_print.asm)
   (run nasm -g -F dwarf -felf64 pass_print.asm -o main.o)
   (run gcc-13 -g -no-pie main.o %{stdlib} -o pass_print.exe))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to tuple0)
 (deps ./tuple0.ml tuple0.exe))

(rule
 (targets tuple0.asm)
 (deps
  (:src tuple0.ml)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (run %{project_root}/back_amd64/amd64_compiler.exe %{src} -o tuple0.asm)))

(rule
 (targets tuple0.exe)
 (deps
  (:src tuple0.asm)
  (:stdlib %{project_root}/back_amd64/rukaml_stdlib.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run nasm -g -F dwarf -felf64 %{src} -o tuple0.o)
   (run gcc-13 -g -no-pie tuple0.o %{stdlib} -o tuple0.exe))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(cram
 (applies_to run fib fack tuples)
 (deps
  ../llvm/fack.ml
  fac.ml
  ;
  ))
